# gmail-spam-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gmail_spam_cleaner/: __init__.py  __main__.py  auth.py  cache.py  cleaner.py  cli.py  constants.py  display.py  export.py  gmail_client.py  models.py  scanner.py  scorer.py
tests/: conftest.py  test_cache.py  test_cli.py  test_scanner.py  test_scorer.py
tests/fixtures/: message_newsletter.json  message_personal.json
